# mne-pipeline-hd

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CNAME  Kurzanleitung MNE-Python Pipeline.docx  LICENSE  LICENSE.txt  MANIFEST.in  Neuromag_122.lout  Pipeline.py  Pipeline_Laser.py  Pipeline_Lx_Audi.py  Pipeline_Pinprick.py  Pipeline_Pinprick_Linux.py  Pipeline_Pinprick_old_files.py  README.md  Test.py  find_binary_events.py  genindex.html  index.html  objects.inv  pipeline_main.py  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.py
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: automerge_precommit  docs.yml  pypi_release.yml  run_tests.yml
Pipeline_functions/: .py  decorators.py  io_functions.py  operations_functions.py  pipeline_classes.py  plot_functions.py  subject_organisation.py
_sources/api/: index.rst.txt  parameter_widgets.rst.txt
_static/: documentation_options.js  versions.json
api/: index.html  parameter_widgets.html
basic_functions/: operations_functions.py  plot_functions.py
custom_functions/: kristins_functions.py  melofix_functions.py  pinprick_functions.py
development/: index.html
doc/: Makefile
doc/source/: conf.py  index.rst  parameter_widgets.rst
docs/source/: conf.py  index.rst  parameter_widgets.rst
documentation/: index.html
install/: index.html
mne-pipeline-hd/: __main__.py
mne-pipeline-hd/basic_functions/: io.py  operations.py  operations_functions.py  plot.py
mne-pipeline-hd/custom_functions/: __init__.py  kristin.py  melofix.py  pinprick.py
mne-pipeline-hd/development/: function_call_old.py  gamodel.py  get_funcs.py  parameters_template.py  pd_concatenate_args.py  qt-mac.py
mne-pipeline-hd/gui/: main_win.py  parameter_widgets.py  qt_utils.py  subject_widgets.py
mne-pipeline-hd/pipeline_functions/: __init__.py  decorators.py  function_call.py  function_call_old.py  function_utils.py  gui.py  gui_functions.py  main_win.py  operations_dict.py  parameter_widgets.py  parameters.py  pipeline_utils.py  project.py  subject_organisation.py  subjects.py  utilities.py
mne-pipeline-hd/resources/: functions.csv  functions_empty.csv  operations_dict.py  parameters.csv  parameters_template.py
mne-pipeline-hd/tests/: get_funcs.py  get_params.py  qt-mac.py  qt_test.py
mne_pipeline_hd/: __init__.py  __main__.py  _version.py  conftest.py  pipeline_main.py  pytest.ini
mne_pipeline_hd/assets/: functions.csv  parameters.csv
mne_pipeline_hd/basic_functions/: __init__.py  basic_operations.py  basic_operations_config.json  basic_plot.py  basic_plot_config.json  configuration.toml  io_functions.py  loading.py  operations.py  operations_functions.py  plot.py  plot_functions.py
nodz/: Enter your path  nodz_demo.py  nodz_main.py  nodz_utils.py
p_functions/: QT-Test.py  func_cache.py  plot_functions.py  utilities.py
pipeline_functions/: QT-Test.py  __init__.py  decorators.py  func_cache.py  gui_functions.py  io_functions.py  operations_dict.py  operations_functions.py  pipeline_classes.py  plot_functions.py  subject_organisation.py  utilities.py
templates/: parameters_template.py  path_template.py  paths_template.py
tests/: qt_test.py
(+127 files in other folders)
