[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mne-pipeline-hd"
authors = [
    { name = "Martin Schulz", email = "dev@mgschulz.de" }
]
description = "A Pipeline-GUI for MNE-Python from MEG-Lab Heidelberg"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["mne-python", "meg", "eeg", "pipeline", "gui", "heidelberg"]
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # MNE
    "mne",
    "mne-qt-browser",
    "mne-connectivity",
    # MNE related
    "vtk", # needed for CIs
    "nibabel", # needed for CIs
    "pyvistaqt", # needed for CIs
    "autoreject",
    "h5io",
    "h5netcdf",
    # PyQt
    "qtpy",
    "darkdetect",
    "pyobjc-framework-Cocoa; sys_platform == 'Darwin'",
    # Other
    "psutil",
]
dynamic = [ "version" ]
[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-qt",
    "pre-commit",
    "black",
    "ruff",
    "sphinx",
    "pydata-sphinx-theme",
]

[project.urls]
Homepage = "https://github.com/marsipu/mne-pipeline-hd"
Repository = "https://github.com/marsipu/mne-pipeline-hd.git"

[project.scripts]
mne_pipeline_hd = "mne_pipeline_hd.__main__:main"

[tool.hatch.build]
exclude = [
    "/.*",
    "/*.yml",
]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "release-branch-semver" }

[tool.black]
line-length = 88
# All supported versions
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
# Minimal supported version
target-version = "py39"

# For type checking
[tool.pyright.defineConstant]
PYQT5 = false
PYSIDE2 = false
PYQT6 = true
PYSIDE6 = false
